Improves error handling in CLI and Result class